fix ui bug where pipeline was no longer visible for long step output

--- a/src/less/pipeline.less
+++ b/src/less/pipeline.less
@@ -15,7 +15,7 @@
     flex-direction: column;
 }
 
-.pipeline {
+.pipeline__step-container {
     overflow-x: auto;
     overflow-y: hidden;
 }
